# kingfisher-airband

./: .gitignore  README.md  config.example.yaml  pyproject.toml
airband/: __init__.py  __main__.py  config.py  main.py
airband/api/: server.py
airband/atis/: parser.py
airband/ingest/: udp.py
airband/kingfisher/: client.py
airband/lexicon/: postprocess.py
airband/planner/: channels.py
airband/record/: flac.py
airband/sdr/: rtl_airband.py
airband/stt/: worker.py
data/airports/: frequencies.json
deploy/: 99-rtl-sdr.rules  airband.service
scripts/: spike_sdr.sh  spike_stt.py
tests/: __init__.py  test_parser.py  test_rtl_conf.py
web/: index.html
web/static/: app.js  style.css
