[project]
name = "kingfisher-airband"
version = "0.1.0"
description = "Offline VHF airband monitor with ATC transcription for Kingfisher"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eric Westphal" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "webrtcvad>=2.0.10",
    "soundfile>=0.12.0",
    "httpx>=0.27.0",
    "faster-whisper>=1.1.0",
]

[project.scripts]
airband = "airband.main:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airband"]

[tool.pytest.ini_options]
testpaths = ["tests"]
